--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
 </head>
 <body data-spy="scroll" data-target=".navbar-inverse" data-offset="60">
 <div id="app"></div>
+<div class="footer">
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted text-center">&copy; 2017 WebSite</p>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
 <script src="./js/index.min.js"></script>
